...
            Polygon(
                points = polygonGeometry.points,
                clickable = polygon.clickable,
                fillColor = polygon.fillColor,
                strokeColor = polygon.strokeColor,
                strokeWidth = polygon.strokeWidthPx(density),
                tag = polygon.sourceAcronym,
                onClick = { onAreaClick(polygon.sourceAcronym) }
            )
        }
    }
}

...
